--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@altgen/typer-composable": "^1.3.0",
     "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.8.3",
     "tailwindcss-elevation": "^1.0.1",
+    "typewriter-effect": "^2.19.0",
     "typewriter-vue": "^0.5.19",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-type-writer": "^0.2.1",
     "vue-typewriter": "^2.2.1",
+    "vue-typewriter-effect": "^0.1.2",
+    "vue-writer": "^1.2.0",
     "vuetify": "^2.6.14",
     "vuex": "^4.0.0"
   },
