--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@altgen/typer-composable": "^1.3.0",
     "@vueuse/motion": "^2.0.0-beta.12",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "core-js": "^3.8.3",
     "tailwindcss-elevation": "^1.0.1",
     "typewriter-effect": "^2.19.0",
     "typewriter-vue": "^0.5.19",
     "vue": "^3.2.13",
+    "vue-aos": "^3.1.0",
     "vue-router": "^4.0.3",
     "vue-type-writer": "^0.2.1",
     "vue-typewriter": "^2.2.1",
