--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@altgen/typer-composable": "^1.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@vueuse/motion": "^2.0.0-beta.12",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
+    "locomotive-scroll": "^4.1.4",
     "tailwindcss-elevation": "^1.0.1",
     "typewriter-effect": "^2.19.0",
     "typewriter-vue": "^0.5.19",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@iconify/vue": "^4.1.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
